@@ -6,7 +6,7 @@
 
     <groupId>io.choerodon</groupId>
     <artifactId>test-manager-service</artifactId>
-    <version>0.5.0.RELEASE</version>
+    <version>0.12.0.RELEASE</version>
 
     <!--加parent-->
     <parent>
@@ -20,6 +20,7 @@
         <java.version>1.8</java.version>
         <choerodon.starters.version>0.8.1.RELEASE</choerodon.starters.version>
         <powermock.version>1.7.4</powermock.version>
+        <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
     </properties>
 
     <dependencies>
@@ -58,10 +59,6 @@
             <artifactId>choerodon-starter-hitoa</artifactId>
             <version>${choerodon.starters.version}</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>mysql</groupId>-->
-            <!--<artifactId>mysql-connector-java</artifactId>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
@@ -181,11 +178,6 @@
             <version>3.4</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-compress</artifactId>
-            <version>1.18</version>
-        </dependency>
-        <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-api-mockito</artifactId>
             <version>${powermock.version}</version>
@@ -258,6 +250,7 @@
                         <include>**/*Test.java</include>
                         <include>**/*Spec.java</include>
                     </includes>
+                    <argLine>@{argLine}</argLine>
                 </configuration>
             </plugin>
         </plugins>
